<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/title_sale_cancel" />

    <FrameLayout
        android:id="@+id/fltLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_trans"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tvw_payment_tipo_documento"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/tvw_payment_tipo_documento" />

            <RadioButton
                android:id="@+id/rbwBoleta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rdw_boleta" />

            <RadioButton
                android:id="@+id/rdwFactura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdw_factura" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textStyle="bold"
                android:labelFor="@+id/edwNumeroDocumento"
                android:text="@string/numero_documento" />

            <EditText
                android:id="@+id/edwNumeroDocumento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="number|textCapCharacters"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textStyle="bold"
                android:labelFor="@+id/edwNumeroTransaccion"
                android:text="@string/numero_transaccion" />

            <EditText
                android:id="@+id/edwNumeroTransaccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="number|textCapCharacters"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_medium">

            <Button
                android:id="@+id/btnAnular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/anular"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>